sfdx-source/shared-services/sfdx-source/main/objects/EnterpriseEvent__e/EnterpriseEvent__e.object-meta.xml
<CustomObject>
    <description>Enterprise-wide platform event for cross-package communication</description>
    <label>Enterprise Event</label>
    <pluralLabel>Enterprise Events</pluralLabel>
</CustomObject>