sfdx-source/shared-services/sfdx-source/main/objects/EnterpriseEvent__e/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Category of the event (e.g., Account, Opportunity, Product)</description>
    <label>Category</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>