sfdx-source/shared-services/sfdx-source/main/objects/EnterpriseEvent__e/fields/EventName__c.field-meta.xml
<CustomField>
    <fullName>EventName__c</fullName>
    <description>Name of the specific event (e.g., ACCOUNT_CREATED, OPPORTUNITY_CLOSED)</description>
    <label>Event Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>