sfdx-source/shared-services/sfdx-source/main/objects/EnterpriseEvent__e/fields/Payload__c.field-meta.xml
<CustomField>
    <fullName>Payload__c</fullName>
    <description>JSON payload for the event</description>
    <label>Payload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>